--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -5,8 +5,9 @@
   margin: auto;
 }
 .case {
+  margin: 3px;
   background-color: beige;
-  border: 1px solid black;
+  border: 2px solid black;
   height: 100px;
   font-size: 50px;
 }
